--- a/quo.html
+++ b/quo.html
@@ -4,7 +4,7 @@
     <!-- Compressed CSS -->
     <link href="https://fonts.googleapis.com/css?family=Lobster+Two" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.0/css/foundation.min.css">
-    <link rel="stylesheet" href="css/design.css">
+    <link rel="stylesheet" href="design.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="js/main.js"></script>
     <style>
